[package]
name = "flask"
version = "2.0.3"
repository = "https://github.com/bpmason1/flask-rs"
authors = ["Brian Mason <bpmason1@hotmail.com>"]
license = "MIT"
description = "create http Request/Response objects from a raw TcpStream"
readme = "README.md"
keywords = ["http", "tcp"]
categories = ["network-programming", "web-programming"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
nom = { version = "6.0.1", features = ["regexp"] }

[dev-dependencies]
mockito = "0.28.0"
rand = "0.7.3"

