[package]
name = "flask"
version = "2.1.0"
repository = "https://github.com/bpmason1/flask-rs"
authors = ["Brian Mason <bpmason1@hotmail.com>"]
license = "MIT"
description = "create http Request/Response objects from a raw TcpStream"
readme = "README.md"
keywords = ["http", "tcp"]
categories = ["network-programming", "web-programming"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
nom = { version = "7.1" }

[dev-dependencies]
mockito = "1.0.2"
rand = "0.8.5"

